# ChangeLog for dev-ruby/archive-tar-minitar
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/archive-tar-minitar/ChangeLog,v 1.36 2012/06/15 14:22:57 flameeyes Exp $

*archive-tar-minitar-0.5.3-r2 (15 Jun 2012)

  15 Jun 2012; Diego E. Pettenò <flameeyes@gentoo.org>
  +archive-tar-minitar-0.5.3-r2.ebuild, -archive-tar-minitar-0.5.3-r1.ebuild,
  -archive-tar-minitar-0.5.3.ebuild:
  Fix gemspec (sorry).

*archive-tar-minitar-0.5.3-r1 (15 Jun 2012)

  15 Jun 2012; Diego E. Pettenò <flameeyes@gentoo.org>
  +archive-tar-minitar-0.5.3-r1.ebuild,
  +files/archive-tar-minitar-0.5.3-pipes.patch:
  Add patch to fix minitar's reader on non-seekable streams.

*archive-tar-minitar-0.5.3 (15 Jun 2012)

  15 Jun 2012; Diego E. Pettenò <flameeyes@gentoo.org>
  +archive-tar-minitar-0.5.3.ebuild:
  Update from minitar gem.

*archive-tar-minitar-0.5.2-r4 (14 Jun 2012)

  14 Jun 2012; Diego E. Pettenò <flameeyes@gentoo.org>
  +archive-tar-minitar-0.5.2-r4.ebuild,
  +files/archive-tar-minitar-0.5.2-gentoo.patch,
  -archive-tar-minitar-0.5.2-r3.ebuild:
  Fix minitar command on recent systems.

  14 Sep 2011; Jeroen Roovers <jer@gentoo.org>
  archive-tar-minitar-0.5.2-r2.ebuild:
  Stable for HPPA (bug #369573).

  10 Jul 2011; Mark Loeser <halcy0n@gentoo.org>
  archive-tar-minitar-0.5.2-r2.ebuild:
  Stable for ppc64; bug #353130

  01 Apr 2011; Michael Weber <xmw@gentoo.org>
  archive-tar-minitar-0.5.2-r2.ebuild:
  sparc stable (bug 353130)

  27 Mar 2011; Brent Baude <ranger@gentoo.org>
  archive-tar-minitar-0.5.2-r2.ebuild:
  Marking archive-tar-minitar-0.5.2-r2 ppc stable for bug 353130

  13 Feb 2011; Raúl Porcel <armin76@gentoo.org>
  archive-tar-minitar-0.5.2-r2.ebuild:
  ia64 stable wrt #353130

  31 Jan 2011; Christian Faulhammer <fauli@gentoo.org>
  archive-tar-minitar-0.5.2-r2.ebuild:
  stable x86, bug 353130

  30 Jan 2011; Markos Chandras <hwoarang@gentoo.org>
  archive-tar-minitar-0.5.2-r2.ebuild: