@@ -1,24 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX archive-tar-minitar-0.5.2-gentoo.patch 613 RMD160 f17d56df498eaa3d61080a2f23f5158f6b8409e9 SHA1 8434a32fc3071d436219bafcc39913173f0be636 SHA256 eede509582d803ecb7d1ce622cd7c84e74cc3b0c96e28f34c6f796fe985d4416
 AUX archive-tar-minitar-0.5.3-pipes.patch 1395 RMD160 a01a471418edbca043c28cdcf5968c2c431eaecb SHA1 231f58da55dea770a76d287ced83f4b867b1e9d1 SHA256 ddbc916596cff6ecc05a2835445bf0155a196533a0a9cd67b855789e18931d51
 DIST archive-tar-minitar-0.5.2.tar.gz 23164 RMD160 7b21994dfbcb062572f0474cbf7731a44509e3b4 SHA1 d6a53fcea69c0c9fca1e8399a9645a88d2d664c5 SHA256 8583b8d3e366713048fe4b62402de0c51e71d244d962d90706e2578ea0764017
 DIST minitar-0.5.3.gem 23040 RMD160 400f9594aacccb4791ea3898e078cfe59c365716 SHA1 639cd72d6ba8df5a9c85dcd613d96340e7b663ca SHA256 a36087768a4a524cd1d85c4a1a6f637c67c5cbe91b5d97155a5a5a6b67d0bb0c
-EBUILD archive-tar-minitar-0.5.2-r1.ebuild 664 RMD160 dd2a02db556e1fb7e06009f8b7dad4a31d904fdc SHA1 777e3c662e443f6072d204a7efaefe2fc86090fe SHA256 6f2f42d50b21a0e4196f99e54b2c583bb1152b8ec5ab9e925a2fffd547cb8eee
 EBUILD archive-tar-minitar-0.5.2-r2.ebuild 675 RMD160 1e9fe18bd5f1ab433c9bf4b36e2aad880fbec650 SHA1 d3352b0edfef5d080b6ad3450d7809c1aa1d6aa3 SHA256 8df1622d4e753155e4721333eff122393e20744fecd68b386e88db9a3dfdd9d3
 EBUILD archive-tar-minitar-0.5.2-r4.ebuild 821 RMD160 0c55eee10ff2d64dca00ba1ca7bb2495fc476c7d SHA1 870bfb3e810c9ca67d9b4f9d8fa9c3c4085dd4dd SHA256 af2d62fc02a9c6011d0cbf41de240e5359aad8d888e72f0430ee6710bc425879
 EBUILD archive-tar-minitar-0.5.3-r2.ebuild 931 RMD160 f2b4771a9427ec9287c214146b52e9828d29ab6e SHA1 9754a5071654442f8241c4a14c0ef766d381024a SHA256 9dd21bb6f42283da1d35e09f0d04eb040caf4d922c23c7d3c2407e5342a76fc9
-MISC ChangeLog 5574 RMD160 8bea6b850169af2a4528af3b33ab67e266d5d6df SHA1 52991d9f9ab92900295e28703a38af6ff78810b0 SHA256 4ed672eef9296b8b5434eb088c6ee203a1c70636c5afe45e5a2d060b57b2f6eb
+MISC ChangeLog 5684 RMD160 d6ae15404afe8eb8e99d951b536098e5c3260168 SHA1 805172be05f283f2053089cd9f8b102a39a15b1f SHA256 1cf845437c6396b32099f434d38d9c754a66a2a68c321a6abc794ccda6524a2a
 MISC metadata.xml 232 RMD160 f9418d6819b1c2a52e0a9a37ed29350b224cfe84 SHA1 d10483d28525a0368759131b13df5717b54b2fd1 SHA256 7fc099a9e8cda0febb6431f23e76d7782dde1610bed8e42afce16e96a8c5ee93
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJP20VYAAoJEBzRPIrUMBNC/r0IAJjS9gavRvXFSkK3GkG/pdeq
-9UjQyMSXoAy9hFs8vPz7Ol0l9kIO5LLmed1WA0JZb0eo1dQGeK+NtrN4yjhBvsri
-Ej2F+LHSIxNYX63riGPYB24FjDdXalVk2eRpikKQi0j+Ns9SG3jiIUWMp8Wc9TJA
-7ucO6BoQrzCXWxC6eZXRhDD8PFWybEVXsvVq3YZwc8q0UvNDstHmU2V0V6AwKKNk
-O3dd3E9Xjqi8Eah5xWjjidW8GdQlUKUCJLHNpD2pm67JS3JOzDkhUoXK1/g8sHQ7
-mkOQF91OLS/a2gYo71zki9nBMnnBKbyT5dDJ4wsDo65WCXTqvQAjoFFwFiPddMU=
-=n1M7
+iF4EAREIAAYFAk/p9rUACgkQiIP6VqMIqNddjQD/T6LkhrAmRbBhbnT0ElJeeWsi
+UOJmDtvbQPEr9AUIXAwA/R7bwRCao0wtt4UZ/FEpV8Ji5/yXhy229/c0VBbiftB/
+=QWuM
 -----END PGP SIGNATURE-----
